test/Fail/Sigma-syntax-6.agda
{-# OPTIONS --guarded #-}

open import Agda.Builtin.Sigma

postulate
  _ : (@lock A : Set) (x) Set
